--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 
 <body class="bg-[#2B2B2B] font-bold text-white">
     <header class="flex items-center justify-between px-[100px] py-[20px] text-white mb:px-[10px]">
-        <img src="./img/logo.png" alt="">
+        <img src="./src/img/logo.png" alt="">
         <ul class="flex gap-[50px] mb:hidden">
             <li><a href="#">Marketplace</a></li>
             <li><a href="#">Rankings</a></li>
@@ -18,10 +18,10 @@
         </ul>
         <div
             class="flex items-center w-[100px] bg-[#A259FF] justify-center gap-[5px] py-[5px] rounded-[10px] mb:hidden">
-            <img src="./img/User.png" alt="">
+            <img src="./src/img/User.png" alt="">
             <p>Sign Up</p>
         </div>
-        <img class="hidden mb:block" src="./img/nav menu.png" alt="">
+        <img class="hidden mb:block" src="./src/img/nav menu.png" alt="">
     </header>
 
     <main>
@@ -33,7 +33,7 @@
                 <div class="">
                     <div
                         class="flex items-center w-[150px] bg-[#A259FF] justify-center gap-[5px] py-[8px] rounded-[10px] my-[10px]">
-                        <img src="./img/RocketLaunch.png" alt="">
+                        <img src="./src/img/RocketLaunch.png" alt="">
                         <p>Get Started</p>
                     </div>
                     <div class="flex justify-between">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <img class="mb:w-[100%] mb:py-[20px]" src="./img/Highlighted NFT (1).png" alt="">
+            <img class="mb:w-[100%] mb:py-[20px]" src="./src/img/Highlighted NFT (1).png" alt="">
         </section>
 
         <section class="px-[150px] py-[50px] mb:px-[10px] mb:py-[20px]">
@@ -60,9 +60,9 @@
             <p>Checkout our weekly updated trending collection.</p>
 
             <div class="flex justify-between pt-[50px]">
-                <img class="mb:w-[100%]" src="./img/Collection Card.png" alt="">
-                <img class="mb:hidden" src="./img/Collection Card (1).png" alt="">
-                <img class="mb:hidden" src="./img/Collection Card (2).png" alt="">
+                <img class="mb:w-[100%]" src="./src/img/Collection Card.png" alt="">
+                <img class="mb:hidden" src="./src/img/Collection Card (1).png" alt="">
+                <img class="mb:hidden" src="./src/img/Collection Card (2).png" alt="">
             </div>
         </section>
 
@@ -74,14 +74,14 @@
                 </div>
                 <div
                     class="flex items-center w-[200px] border-[2px] border-[#A259FF] justify-center gap-[5px] py-[8px] rounded-[10px] mb:w-[100%] mb:mt-[20px]">
-                    <img src="./img/RocketLaunch (1).png" alt="">
+                    <img src="./src/img/RocketLaunch (1).png" alt="">
                     <p>View Rankings</p>
                 </div>
             </div>
 
             <div class="grid grid-cols-4 gap-4 p-4 text-white mb:grid-cols-1">
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:flex-row mb:gap-[10px]">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/Avatar.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/Avatar.png" alt=""></div>
                     <div>
                         <h2 class="font-semibold">Keepitreal</h2>
                         <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:flex-row mb:gap-[10px]">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/Artist Avatar.png" alt="">
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/Artist Avatar.png" alt="">
                     </div>
                     <div>
                         <h2 class="font-semibold">DigiLab</h2>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:flex-row mb:gap-[10px]">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/Avatar (1).png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/Avatar (1).png" alt=""></div>
                     <div>
                         <h2 class="font-semibold">GravityOne</h2>
                         <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:flex-row mb:gap-[10px]">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img//Artist Avatar (1).png" alt="">
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img//Artist Avatar (1).png" alt="">
                     </div>
                     <div>
                         <h2 class="font-semibold">Juanie</h2>
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:flex-row mb:gap-[10px]">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/5.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/5.png" alt=""></div>
                     <div>
                         <h2 class="font-semibold">BlueWhale</h2>
                         <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
@@ -123,43 +123,43 @@
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/6.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/6.png" alt=""></div>
                     <h2 class="font-semibold">Mr Fox</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/7.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/7.png" alt=""></div>
                     <h2 class="font-semibold">Shroomie</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/8.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/8.png" alt=""></div>
                     <h2 class="font-semibold">Robotica</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/9.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/9.png" alt=""></div>
                     <h2 class="font-semibold">RustyRobot</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/10.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/10.png" alt=""></div>
                     <h2 class="font-semibold">Animakid</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/11.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/11.png" alt=""></div>
                     <h2 class="font-semibold">Dotgu</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
 
                 <div class="bg-[#3B3B3B] rounded-xl p-4 flex flex-col items-center mb:hidden">
-                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./img/12.png" alt=""></div>
+                    <div class="w-20 h-20 bg-gray-600 rounded-full mb-2"><img src="./src/img/12.png" alt=""></div>
                     <h2 class="font-semibold">Ghiblier</h2>
                     <p class="text-sm text-gray-400">Total Sales: <span class="text-white">34.53 ETH</span></p>
                 </div>
@@ -171,14 +171,14 @@
             <h1 class="text-[40px]">Browse Categories</h1>
 
             <div class="grid grid-cols-4 gap-4 mb:grid-cols-2 py-[50px]">
-                <img src="./img/i1.png" alt="Art" class="">
-                <img src="./img/i2.png" alt="Collectibles" class="">
-                <img src="./img/i3.png" alt="Music" class="">
-                <img src="./img/i4.png" alt="Photography" class="">
-                <img src="./img/i5.png" alt="Video" class="">
-                <img src="./img/i6.png" alt="Utility" class="">
-                <img src="./img/i7.png" alt="Sport" class="">
-                <img src="./img/i8.png" alt="Virtual Worlds" class="">
+                <img src="./src/img/i1.png" alt="Art" class="">
+                <img src="./src/img/i2.png" alt="Collectibles" class="">
+                <img src="./src/img/i3.png" alt="Music" class="">
+                <img src="./src/img/i4.png" alt="Photography" class="">
+                <img src="./src/img/i5.png" alt="Video" class="">
+                <img src="./src/img/i6.png" alt="Utility" class="">
+                <img src="./src/img/i7.png" alt="Sport" class="">
+                <img src="./src/img/i8.png" alt="Virtual Worlds" class="">
             </div>
         </section>
 
@@ -189,7 +189,7 @@
             <div class="flex justify-between py-[50px] mb:flex-col">
                 <div
                     class="w-[300px] p-[20px] bg-[#3B3B3B] text-center rounded-xl mb:flex mb:w-[100%] mb:items-center mb:text-start mb:justify-between">
-                    <img class="mb:w-[100px] mb:h-[100px]" src="./img/Icon.png" alt="">
+                    <img class="mb:w-[100px] mb:h-[100px]" src="./src/img/Icon.png" alt="">
                     <div>
                         <p class="text-[20px] py-[10px]">Setup Your wallet</p>
                         <p>Set up your wallet of choice. Connect it to the Animarket by clicking the wallet icon in the
@@ -198,7 +198,7 @@
                 </div>
                 <div
                     class="w-[300px] p-[20px] bg-[#3B3B3B] text-center rounded-xl mb:flex mb:w-[100%] mb:items-center mb:text-start mb:justify-between mb:my-[30px]">
-                    <img class="mb:w-[100px] mb:h-[100px]" src="./img/Icon.png" alt="">
+                    <img class="mb:w-[100px] mb:h-[100px]" src="./src/img/Icon.png" alt="">
                     <div>
                         <p class="text-[20px] py-[10px]">Setup Your wallet</p>
                         <p>Set up your wallet of choice. Connect it to the Animarket by clicking the wallet icon in the
@@ -207,7 +207,7 @@
                 </div>
                 <div
                     class="w-[300px] p-[20px] bg-[#3B3B3B] text-center rounded-xl mb:flex mb:w-[100%] mb:items-center mb:text-start mb:justify-between">
-                    <img class="mb:w-[100px] mb:h-[100px]" src="./img/Icon.png" alt="">
+                    <img class="mb:w-[100px] mb:h-[100px]" src="./src/img/Icon.png" alt="">
                     <div>
                         <p class="text-[20px] py-[10px]">Setup Your wallet</p>
                         <p>Set up your wallet of choice. Connect it to the Animarket by clicking the wallet icon in the
@@ -220,7 +220,7 @@
         <section class="py-[50px]">
             <div
                 class="flex justify-between items-center relative bg-[#3B3B3B] mx-[150px] p-[50px] rounded-2xl mb:flex-col mb:mx-[10px] mb:bg-transparent mb:p-0">
-                <img src="./img/Photo.png" alt="">
+                <img src="./src/img/Photo.png" alt="">
                 <div class="w-[350px]">
                     <div>
                         <h1 class="text-[35px]">Join our weekly digest</h1>
@@ -231,7 +231,7 @@
                 </div>
                 <div
                     class="flex w-[120px] justify-between px-[10px] bg-[#A259FF] py-[10px] rounded-xl absolute right-[50px] top-[280px] mb:w-[95%] mb:m-auto mb:left-0 mb:right-0 mb:top-auto mb:justify-center mb:gap-[10px] mb:bottom-[-50px]">
-                    <img src="./img/EnvelopeSimple.png" alt="">
+                    <img src="./src/img/EnvelopeSimple.png" alt="">
                     <p>Subscribe</p>
                 </div>
             </div>
@@ -240,10 +240,10 @@
 
     <footer class="flex justify-between gap-[40px] px-[150px] py-[50px] bg-[#3B3B3B] mb:flex-col mb:px-[20px] mb:mt-[50px]">
         <div class="w-[270px] mb:w-full">
-            <img src="./img/logo.png" alt="Logo">
+            <img src="./src/img/logo.png" alt="Logo">
             <p class="py-[20px] text-gray-300 text-sm">NFT marketplace UI created with Anima for Figma.</p>
             <p class="text-sm text-white">Join our community</p>
-            <img class="py-[15px]" src="./img/Icons.png" alt="Social Icons">
+            <img class="py-[15px]" src="./src/img/Icons.png" alt="Social Icons">
         </div>
 
         <div class="mb:w-full">
